Add playable 2D board mode and cell effect UI